Ported oracle database docker image build from https://github.com/oracle/docker-images
This will be further enhanced:
- with a different timezone
- try to make the base image smaller

--- a/oracledb/dockerfiles/12.2.0.1/Dockerfile
+++ b/oracledb/dockerfiles/12.2.0.1/Dockerfile
@@ -4,20 +4,19 @@
 #
 # ORACLE DOCKERFILES PROJECT
 # --------------------------
-# This is the Dockerfile for Oracle Database 12c Release 1 Enterprise Edition
+# This is the Dockerfile for Oracle Database 12c Release 2
 # 
 # REQUIRED FILES TO BUILD THIS IMAGE
 # ----------------------------------
-# (1) linuxamd64_12102_database_1of2.zip
-#     linuxamd64_12102_database_2of2.zip
-#     Download Oracle Database 12c Release 1 Enterprise Edition for Linux x64
+# (1) linuxx64_12201_database.zip
+#     Download Oracle Database 12c Release 12 Enterprise Edition or Standard Edition 2 for Linux x64
 #     from http://www.oracle.com/technetwork/database/enterprise-edition/downloads/index.html
 #
 # HOW TO BUILD THIS IMAGE
 # -----------------------
 # Put all downloaded files in the same directory as this Dockerfile
 # Run: 
-#      $ docker build -t oracle/database:12.1.0.2-ee . 
+#      $ docker build -t oracle/database:12.2.0.1-${EDITION} . 
 #
 # Pull base image
 # ---------------
@@ -30,14 +29,12 @@ MAINTAINER Gerald Venzl <gerald.venzl@oracle.com>
 # Environment variables required for this build (do NOT change)
 # -------------------------------------------------------------
 ENV ORACLE_BASE=/opt/oracle \
-    ORACLE_HOME=/opt/oracle/product/12.1.0.2/dbhome_1 \
+    ORACLE_HOME=/opt/oracle/product/12.2.0.1/dbhome_1 \
     INSTALL_DIR=/opt/install \
-    INSTALL_FILE_1="linuxamd64_12102_database_1of2.zip" \
-    INSTALL_FILE_2="linuxamd64_12102_database_2of2.zip" \
+    INSTALL_FILE_1="linuxx64_12201_database.zip" \
     INSTALL_RSP="db_inst.rsp" \
     CONFIG_RSP="dbca.rsp.tmpl" \
     PWD_FILE="setPassword.sh" \
-    PERL_INSTALL_FILE="installPerl.sh" \
     RUN_FILE="runOracle.sh" \
     START_FILE="startDB.sh" \
     CREATE_DB_FILE="createDB.sh" \
@@ -79,11 +76,11 @@ ARG DB_EDITION
 RUN yum -y install unzip
 
 # Copy DB install file
-COPY --chown=oracle:dba $INSTALL_FILE_1 $INSTALL_FILE_2 $INSTALL_RSP $PERL_INSTALL_FILE $INSTALL_DB_BINARIES_FILE $INSTALL_DIR/
+COPY --chown=oracle:dba $INSTALL_FILE_1 $INSTALL_RSP $INSTALL_DB_BINARIES_FILE $INSTALL_DIR/
 
 # Install DB software binaries
 USER oracle
-RUN $INSTALL_DIR/$INSTALL_DB_BINARIES_FILE EE
+RUN $INSTALL_DIR/$INSTALL_DB_BINARIES_FILE $DB_EDITION
 
 
 
